Updated Refs; lots on Model, tiny change on Intro

--- a/Thesis/Introduction/Introduction.tex
+++ b/Thesis/Introduction/Introduction.tex
@@ -145,7 +145,7 @@ The overall problem is thus stated simply: \textbf{Which electric field-generati
 This is in an effort to determine which measurable and controllable values can predict H--mode.
 
 The first consideration is to decide \textbf{which terms should be considered for investigation}, as not all nonambipolar fluxes will significantly contribute to the transition.
-For example, the nonambipolar flux due to magnetic ripple loss highly depends on collisionality, in which lower collisionality results in a low flux \cite{stringer_ripple_1972}.
+For example, the nonambipolar flux due to magnetic ripple loss highly depends on collisionality, in which lower collisionality results in a low flux \cite{stringer_effect_1972}.
 Since a relatively ideal operation (temperature on the order of 1 keV at the edge) will be investigated, this flux can be neglected.
 
 \textbf{Identifying what optimal form and relative strengths of each flux and subsequently implementing them} appropriately is the crucial next step.
