--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt]{report}
+\documentclass[a4paper,twoside,12pt]{report}
 
 % Import specific style file in this directory
 \usepackage{thesis}
