--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -5,7 +5,7 @@
 
 %{{{ Alias commands specific to the thesis package
 \newcommand{\shortdoctitle}{$E_r$-Generating Terms}
-\newcommand{\doctitle}{Radial Electric Field-Generating Terms in L-H Transitions}
+\newcommand{\doctitle}{Radial Electric Field-Generating Terms in L--H Transitions}
 \newcommand{\docsubtitle}{Master's Thesis}
 
 \newcommand{\me}{Kevin A. Blondino}
@@ -58,7 +58,7 @@
 }
 %}}}
 
-\title{Radial Electric Field-Generating Terms in L-H Transitions}
+\title{Radial Electric Field-Generating Terms in L--H Transitions}
 \author{\me}
 
 \usepackage{fullpage, indentfirst, graphicx, amsmath, float}
