Only small progress

--- a/Thesis/Model/Model.tex
+++ b/Thesis/Model/Model.tex
@@ -68,7 +68,7 @@ Paquay rewrote the equation as
 \end{align}
 
 \section{Forms of Diffusivities}\label{sec:diffusivities}
-Various forms of $D$ (and subsequently $\chi$) are investigated.
+Various forms of $D$ (and subsequently $\chi$) are presented in investigations with this model.
 The original Itoh model has $D$ proportional to the hyperbolic tangent of the normalized radial electric field \cite{itoh_edge_1991} \cite{zohm_dynamic_1994}
 \begin{align} % Itoh diffusivity
 	D(Z) \,&=\, \frac{D_\text{max} + D_\text{min}}{2} + \frac{(D_\text{max} - D_\text{min})\tanh(Z)}{2}~. \label{eq:Itoh_diffusivity}
