--- a/References/References.bib
+++ b/References/References.bib
@@ -1,4 +1,20 @@
 
+@article{andrew_h-mode_2006,
+	title = {H--mode access in the low density regime on {JET}},
+	volume = {48},
+	issn = {0741-3335},
+	url = {http://stacks.iop.org/0741-3335/48/i=4/a=001},
+	doi = {10.1088/0741-3335/48/4/001},
+	abstract = {1 H--mode access studies under conditions of very low plasma density provide valuable information on the physics of the edge transport barrier formation and are an important part of the operational scenario development for the next step fusion device, ITER. JET operation with a very low edge electron density, \#\#IMG\#\# [http://ej.iop.org/images/0741-3335/48/4/001/ppcf211121in001.gif] {\textbackslash}barn\_{\textbackslash}rme = 0.8{\textbackslash}mbox–1.4 {\textbackslash}times 10{\textasciicircum}19{\textbackslash},{\textbackslash}rm m{\textasciicircum}-3 , with the MkII gas box septum divertor was found to have a significant effect on the power threshold for the L–H transition, P th . A sharp 'turning point' below which P th increases with decreasing \#\#IMG\#\# [http://ej.iop.org/images/0741-3335/48/4/001/ppcf211121in002.gif] {\textbackslash}barn\_{\textbackslash}rme is found for I p / B t values of 2.5 MA/2.7 T, 2.5 MA/2.6 T, 2.5 MA/2.4 T and 2.2 MA/2.4 T. The pedestal electron temperature demonstrates a very similar dependence on the edge \#\#IMG\#\# [http://ej.iop.org/images/0741-3335/48/4/001/ppcf211121in002.gif] {\textbackslash}barn\_{\textbackslash}rme as P th . The role of Z eff in the variation of the H--mode power threshold with density is also considered. Shots with the divertor septum present are compared with an identical \#\#IMG\#\# [http://ej.iop.org/images/0741-3335/48/4/001/ppcf211121in002.gif] {\textbackslash}barn\_{\textbackslash}rme scan, run with the MkII GB septum replacement plate divertor at 2.5 MA/2.7 T and 2.5 MA/2.6 T. The results from this investigation indicate that removal of the septum may have lowered the \#\#IMG\#\# [http://ej.iop.org/images/0741-3335/48/4/001/ppcf211121in002.gif] {\textbackslash}barn\_{\textbackslash}rme 'turning point' for P th .},
+	language = {en},
+	number = {4},
+	urldate = {2018-02-14},
+	journal = {Plasma Physics and Controlled Fusion},
+	author = {Andrew, Y. and Sartori, R. and Righi, E. and Luna, E. de la and Hacquin, S. and Howell, D. F. and Hawkes, N. C. and Horton, L. D. and Huber, A. and {A Korotkov} and O'Mullane, M. G. and contributors, JET-EFDA},
+	year = {2006},
+	pages = {479}
+}
+
 @article{kobayashi_model_2017,
 	title = {Model validation for radial electric field excitation during {L}–{H} transition in {JFT}-2M tokamak},
 	volume = {57},
@@ -20,7 +36,7 @@
 	volume = {3},
 	url = {http://dx.doi.org/10.1063/1.859681},
 	doi = {10.1063/1.859681},
-	abstract = {The mechanism for generation of mean poloidal flow by turbulence is identified and elucidated. Two methods of calculating poloidal flow acceleration are given and shown to yield predictions which agree. These methods link flow generation to the quasilinear radial current or the Reynolds stress $\langle\widetilde{V}_r, \widetilde{V}_\theta\rangle\$. It is shown that poloidal acceleration will occur if the turbulence supports radially propagating waves and if radial gradients in the turbulent Reynolds stress and wave energy density flux are present. In practice, these conditions are met in the tokamak edge region when waves propagate through the outermost closed flux surface or when convection cells with large radial correlation length are situated in steep gradient regions. The possible impact of these results on the theory of the L--H transition is discussed.},
+	abstract = {The mechanism for generation of mean poloidal flow by turbulence is identified and elucidated. Two methods of calculating poloidal flow acceleration are given and shown to yield predictions which agree. These methods link flow generation to the quasilinear radial current or the Reynolds stress {\textless}V\_r, V\_theta{\textgreater}. It is shown that poloidal acceleration will occur if the turbulence supports radially propagating waves and if radial gradients in the turbulent Reynolds stress and wave energy density flux are present. In practice, these conditions are met in the tokamak edge region when waves propagate through the outermost closed flux surface or when convection cells with large radial correlation length are situated in steep gradient regions. The possible impact of these results on the theory of the L--H transition is discussed.},
 	number = {7},
 	journal = {Physics of Fluids B: Plasma Physics},
 	author = {Diamond, P.H. and Kim, Y.‐B.},
@@ -60,7 +76,7 @@
 	issn = {2045-2322},
 	url = {https://www.nature.com/articles/srep30720},
 	doi = {10.1038/srep30720},
-	abstract = {Self-regulation between structure and turbulence, which is a fundamental process in the complex system, has been widely regarded as one of the central issues in modern physics. A typical example of that in magnetically confined plasmas is the Low confinement mode to High confinement mode (L-H) transition, which is intensely studied for more than thirty years since it provides a confinement improvement necessary for the realization of the fusion reactor. An essential issue in the L-H transition physics is the mechanism of the abrupt “radial” electric field generation in toroidal plasmas. To date, several models for the L-H transition have been proposed but the systematic experimental validation is still challenging. Here we report the systematic and quantitative model validations of the radial electric field excitation mechanism for the first time, using a data set of the turbulence and the radial electric field having a high spatiotemporal resolution. Examining time derivative of Poisson’s equation, the sum of the loss-cone loss current and the neoclassical bulk viscosity current is found to behave as the experimentally observed radial current that excites the radial electric field within a few factors of magnitude.},
+	abstract = {Self-regulation between structure and turbulence, which is a fundamental process in the complex system, has been widely regarded as one of the central issues in modern physics. A typical example of that in magnetically confined plasmas is the Low confinement mode to High confinement mode (L--H) transition, which is intensely studied for more than thirty years since it provides a confinement improvement necessary for the realization of the fusion reactor. An essential issue in the L--H transition physics is the mechanism of the abrupt “radial” electric field generation in toroidal plasmas. To date, several models for the L--H transition have been proposed but the systematic experimental validation is still challenging. Here we report the systematic and quantitative model validations of the radial electric field excitation mechanism for the first time, using a data set of the turbulence and the radial electric field having a high spatiotemporal resolution. Examining time derivative of Poisson’s equation, the sum of the loss-cone loss current and the neoclassical bulk viscosity current is found to behave as the experimentally observed radial current that excites the radial electric field within a few factors of magnitude.},
 	journal = {Nature Scientific Reports},
 	author = {Kobayashi, T. and Itoh, K. and Ido, T. and Kamiya, K. and Itoh, S.I. and Miura, Y. and Fujisawa, A. and Inagaki, S. and Ida, K. and Hoshino, K.},
 	month = aug,
@@ -74,7 +90,7 @@
 	shorttitle = {L to {H} mode transition},
 	url = {http://stacks.iop.org/0029-5515/55/i=7/a=073015},
 	doi = {10.1088/0029-5515/55/7/073015},
-	abstract = {The L to H mode transition occurs at a critical power which depends on various parameters, such as the magnetic field, the density, etc. Experimental evidence on various tokamaks (JET, ASDEX-Upgrade, DIII-D, Alcator C-Mod) points towards the existence of a critical temperature characterizing the transition. This criterion for the L-H transition is local and is therefore easier to be compared to theoretical approaches. In order to shed light on the mechanisms of the transition, simple theoretical ideas are used to derive a temperature threshold ( T th ). They are based on the stabilization of the underlying turbulence by a mean radial electric field shear. The nature of the turbulence varies as the collisionality decreases, from resistive ballooning modes to ion temperature gradient and trapped electron modes. The obtained parametric dependencies of the derived T th are tested versus magnetic field, density, effective charge. Various robust experimental observations are reproduced, in particular T th increases with magnetic field B and increases with density below the density roll-over observed on the power threshold.},
+	abstract = {The L to H mode transition occurs at a critical power which depends on various parameters, such as the magnetic field, the density, etc. Experimental evidence on various tokamaks (JET, ASDEX-Upgrade, DIII-D, Alcator C-Mod) points towards the existence of a critical temperature characterizing the transition. This criterion for the L--H transition is local and is therefore easier to be compared to theoretical approaches. In order to shed light on the mechanisms of the transition, simple theoretical ideas are used to derive a temperature threshold ( T th ). They are based on the stabilization of the underlying turbulence by a mean radial electric field shear. The nature of the turbulence varies as the collisionality decreases, from resistive ballooning modes to ion temperature gradient and trapped electron modes. The obtained parametric dependencies of the derived T th are tested versus magnetic field, density, effective charge. Various robust experimental observations are reproduced, in particular T th increases with magnetic field B and increases with density below the density roll-over observed on the power threshold.},
 	language = {en},
 	number = {7},
 	urldate = {2017-08-07},
@@ -152,7 +168,7 @@
 	volume = {67},
 	url = {https://link.aps.org/doi/10.1103/PhysRevLett.67.2485},
 	doi = {10.1103/PhysRevLett.67.2485},
-	abstract = {A model of edge localized modes in tokamak plasmas is presented. A limit-cycle solution is found in the transport equation (time-dependent Ginzburg-Landau type), which has a hysteresis curve for the gradient versus the flux. A periodic oscillation of the particle outflux and an L-H intermediate state are predicted near the L-H transition boundary. A mesophase in spatial structure appears near the edge.},
+	abstract = {A model of edge localized modes in tokamak plasmas is presented. A limit-cycle solution is found in the transport equation (time-dependent Ginzburg-Landau type), which has a hysteresis curve for the gradient versus the flux. A periodic oscillation of the particle outflux and an L--H intermediate state are predicted near the L--H transition boundary. A mesophase in spatial structure appears near the edge.},
 	number = {18},
 	urldate = {2017-07-27},
 	journal = {Physical Review Letters},
@@ -214,7 +230,7 @@
 	issn = {0741-3335},
 	url = {http://stacks.iop.org/0741-3335/42/i=1/a=201},
 	doi = {10.1088/0741-3335/42/1/201},
-	abstract = {After a general discussion of the experimental characteristics of the L-H transition and consideration of basic theoretical principles underlying models for it, this paper reviews the various theories of the L-H transition available in the literature, providing some background information on each theory and expressing the transition criteria in forms suitable for comparison with experiment. Some conclusions on the relevance of these models for explaining the experimental data on the transition are drawn.},
+	abstract = {After a general discussion of the experimental characteristics of the L--H transition and consideration of basic theoretical principles underlying models for it, this paper reviews the various theories of the L--H transition available in the literature, providing some background information on each theory and expressing the transition criteria in forms suitable for comparison with experiment. Some conclusions on the relevance of these models for explaining the experimental data on the transition are drawn.},
 	language = {en},
 	number = {1},
 	urldate = {2017-05-18},
@@ -308,19 +324,6 @@
 	pages = {092306}
 }
 
-@article{nielsen_simulation_2014,
-	title = {Simulation of transition dynamics to high confinement in fusion plasmas},
-	url = {http://arxiv.org/abs/1409.3186},
-	abstract = {The transition dynamics from the low (L) to the high (H) confinement mode in magnetically confined plasmas is investigated using a first-principles four-field fluid model. Numerical results are in close agreement with measurements from the Experimental Advanced Superconducting Tokamak - EAST. Particularly, the slow transition with an intermediate dithering phase is well reproduced by the numerical solutions. Additionally, the model reproduces the experimentally determined L-H transition power threshold scaling that the ion power threshold increases with increasing particle density. The results hold promise for developing predictive models of the transition, essential for understanding and optimizing future fusion power reactors.},
-	urldate = {2017-05-14},
-	journal = {arXiv:1409.3186 [physics]},
-	author = {Nielsen, A. H. and Xu, G. S. and Madsen, J. and Naulin, V. and Rasmussen, J. Juul and Wan, B. N.},
-	month = sep,
-	year = {2014},
-	note = {arXiv: 1409.3186},
-	keywords = {Physics - Plasma Physics}
-}
-
 @book{agency_fusion_2012,
 	title = {Fusion {Physics}},
 	isbn = {9789201304100},
@@ -361,6 +364,21 @@
 	publisher = {Cambridge University Press},
 	author = {Freidberg, Jeffrey P.},
 	year = {2007}
+}
+@article{ryter_h-mode_1998,
+	title = {H--mode power threshold and transition in {ASDEX} {Upgrade}},
+	volume = {40},
+	issn = {0741-3335},
+	url = {http://stacks.iop.org/0741-3335/40/i=5/a=032},
+	doi = {10.1088/0741-3335/40/5/032},
+	abstract = {Global and local H--mode threshold analyses are presented and discussed. The density window was extended up to the density limit towards which the power threshold exhibits a dramatic increase. First results with the new divertor are compared to the previous threshold scaling. Local edge measurements at the L--H transition show that the temperature decreases slightly with density and increases with magnetic field, and that the ion collisionality at the plasma edge is always clearly above unity, between 5 and 15. Experiments at high power threshold exhibit improved L--mode confinement and suggest that two mechanisms are required for the L--H transition.},
+	language = {en},
+	number = {5},
+	urldate = {2018-02-14},
+	journal = {Plasma Physics and Controlled Fusion},
+	author = {Ryter, F. and Suttrop, W. and Brüsehaber, B. and Kaufmann, M. and Mertens, V. and Murmann, H. and Peeters, A. G. and Stober, J. and Schweinzer, J. and {H Zohm} and Team, ASDEX Upgrade},
+	year = {1998},
+	pages = {725}
 }
 
 @article{zhang_edge_1992,
@@ -411,7 +429,7 @@
 	issn = {0741-3335},
 	url = {http://stacks.iop.org/0741-3335/39/i=2/a=007},
 	doi = {10.1088/0741-3335/39/2/007},
-	abstract = {The effects of neutrals near the X-point of tokamaks on the L/H transition are examined. Four mechanisms for bipolar losses, i.e. the loss cone loss, the bulk viscosity loss, the charge-exchange (CX) loss between ions and neutrals and the anomalous loss, occur simultaneously in high-temperature plasmas. Neutral particles near the X-point are found to trigger the H-mode transition. They cause an additional ion loss cone loss via collisions. The lower limit of the neutral density near the X-point for the onset of the H-mode transition is estimated. Neutral particles at the main plasma are shown to prevent the H-mode transition because of CX loss.},
+	abstract = {The effects of neutrals near the X-point of tokamaks on the L/H transition are examined. Four mechanisms for bipolar losses, i.e. the loss cone loss, the bulk viscosity loss, the charge-exchange (CX) loss between ions and neutrals and the anomalous loss, occur simultaneously in high-temperature plasmas. Neutral particles near the X-point are found to trigger the H--mode transition. They cause an additional ion loss cone loss via collisions. The lower limit of the neutral density near the X-point for the onset of the H--mode transition is estimated. Neutral particles at the main plasma are shown to prevent the H--mode transition because of CX loss.},
 	language = {en},
 	number = {2},
 	urldate = {2017-11-01},
@@ -426,7 +444,7 @@
 	volume = {2},
 	url = {aip.scitation.org/doi/pdf/10.1063/1.859473},
 	doi = {10.1063/1.859473},
-	abstract = {The poloidal momentum balance equation in tokamaks is shown to have bifurcated solutions; the poloidal flow velocity U\_p can suddenly become more positive when the ion collisionality decreases. The corresponding radial electric field E\_r becomes more negative, suppresses turbulent fluctuations, and improves plasma confinement. A heuristic argument is employed to illustrated the effects of E\_r on turbulent fluctuations. A more negative value of E\_r and/or a more positive value of dE\_r/dr can suppress the fluctuation amplitudes, if dP/dr {\textless} 0 (with r the local minor radius and P the plasma pressure). The theory is employed to explain the L-H transition observed in tokamaks.},
+	abstract = {The poloidal momentum balance equation in tokamaks is shown to have bifurcated solutions; the poloidal flow velocity U\_p can suddenly become more positive when the ion collisionality decreases. The corresponding radial electric field E\_r becomes more negative, suppresses turbulent fluctuations, and improves plasma confinement. A heuristic argument is employed to illustrated the effects of E\_r on turbulent fluctuations. A more negative value of E\_r and/or a more positive value of dE\_r/dr can suppress the fluctuation amplitudes, if dP/dr {\textless} 0 (with r the local minor radius and P the plasma pressure). The theory is employed to explain the L--H transition observed in tokamaks.},
 	number = {6},
 	journal = {Physics of Fluids B: Plasma Physics},
 	author = {Shaing, K.C. and Crume, E.C. and Houlberg, W.A.},
@@ -438,12 +456,12 @@
 	title = {A theoretical model of {H}-mode transition triggered by condensed neutrals near {X}-point},
 	volume = {39},
 	url = {http://stacks.iop.org/0741-3335/39/i=2/a=007},
-	abstract = {The effects of neutrals near the X-point of tokamaks on the L/H transition are examined. Four mechanisms for bipolar losses, i.e. the loss cone loss, the bulk viscosity loss, the charge-exchange (CX) loss between ions and neutrals and the anomalous loss, occur simultaneously in high-temperature plasmas. Neutral particles near the X-point are found to trigger the H-mode transition. They cause an additional ion loss cone loss via collisions. The lower limit of the neutral density near the X-point for the onset of the H-mode transition is estimated. Neutral particles at the main plasma are shown to prevent the H-mode transition because of CX loss.},
+	abstract = {The effects of neutrals near the X-point of tokamaks on the L/H transition are examined. Four mechanisms for bipolar losses, i.e. the loss cone loss, the bulk viscosity loss, the charge-exchange (CX) loss between ions and neutrals and the anomalous loss, occur simultaneously in high-temperature plasmas. Neutral particles near the X-point are found to trigger the H--mode transition. They cause an additional ion loss cone loss via collisions. The lower limit of the neutral density near the X-point for the onset of the H--mode transition is estimated. Neutral particles at the main plasma are shown to prevent the H--mode transition because of CX loss.},
 	number = {2},
 	journal = {Plasma Physics and Controlled Fusion},
 	author = {Toda, S. and Itoh, S.I. and Yagi, M. and Miura, Y.},
 	year = {1997},
-	keywords = {H-mode},
+	keywords = {H--mode},
 	pages = {301}
 }
 
@@ -482,7 +500,7 @@
 	issn = {0741-3335},
 	url = {http://stacks.iop.org/0741-3335/44/i=5A/a=345},
 	doi = {10.1088/0741-3335/44/5A/345},
-	abstract = {The International Global H-mode Threshold Database has been revised and cleaned from inadequate data for some tokamaks. This significantly reduces the scatter for the corresponding datasets. The resulting new analyses including all ten tokamaks yields results comparable to previous work. In this case, the uncertainties are essentially determined by the inability of the linear models to take the different dependencies into account with sufficient accuracy. However, restricting the database to a more homogeneous subset of medium and large size tokamaks with single-null elongated plasma shapes yields expressions with much lower scatter. In this case the contribution from the experimental scatter in the individual machines plays a role. These regressions are stable against excluding one tokamak in turn.},
+	abstract = {The International Global H--mode Threshold Database has been revised and cleaned from inadequate data for some tokamaks. This significantly reduces the scatter for the corresponding datasets. The resulting new analyses including all ten tokamaks yields results comparable to previous work. In this case, the uncertainties are essentially determined by the inability of the linear models to take the different dependencies into account with sufficient accuracy. However, restricting the database to a more homogeneous subset of medium and large size tokamaks with single-null elongated plasma shapes yields expressions with much lower scatter. In this case the contribution from the experimental scatter in the individual machines plays a role. These regressions are stable against excluding one tokamak in turn.},
 	language = {en},
 	number = {5A},
 	urldate = {2017-08-07},
@@ -500,7 +518,7 @@
 	url = {http://adsabs.harvard.edu/abs/2016PhyD..331...13D},
 	doi = {10.1016/j.physd.2016.05.008},
 	abstract = {Experiments in tokamaks (nuclear fusion reactors) have shown two modes 
-of operation: L-mode and H-mode. Transitions between these two modes
+of operation: L--mode and H--mode. Transitions between these two modes
 have been observed in three types: sharp, smooth and oscillatory. The
 same modes of operation and transitions between them have been observed
 in simplified transport models of the fusion plasma in one spatial
@@ -515,7 +533,7 @@ detected. However, when these techniques are applied to the transport
 model, we detect a degenerate Bogdanov-Takens bifurcation of codimension
 4. The nearby 1- and 2-parameter slices are in agreement with the
 presence of this codimension-4 degenerate Bogdanov-Takens bifurcation,
-and all three types of L-H transitions can be recognized in these
+and all three types of L--H transitions can be recognized in these
 slices. The same codimension-4 situation is observed under variation of
 the additional parameters in the model, and under some modifications of
 the model.},
@@ -524,7 +542,7 @@ the model.},
 	author = {Veldman, D. W. M. and de Blank, H. J. and Pekkér, M. J. and Kuznetsov, Yu. A.},
 	month = sep,
 	year = {2016},
-	keywords = {Bifurcations theory, L-H transition, Large-scale systems, MATLAB, Numerical continuation},
+	keywords = {Bifurcations theory, L--H transition, Large-scale systems, MATLAB, Numerical continuation},
 	pages = {13--26}
 }
 
@@ -533,7 +551,7 @@ the model.},
 	volume = {72},
 	url = {https://link.aps.org/doi/10.1103/PhysRevLett.72.222},
 	doi = {10.1103/PhysRevLett.72.222},
-	abstract = {The dynamic behavior of the L-H transition in the ASDEX-Upgrade tokamak is described. We focus on the periodic L-H-L transitions known as ‘‘dithering H mode’’ and show that there is an intrinsic time scale in this process which is characteristic for the L-H transition. We give a tentative explanation for the phenomenon using an extension of Itoh’s model for the L-H transition and find that this simple bifurcation model can qualitatively explain many of the experimental observations. According to our model, the dithering cycles are a limit cycle oscillation due to a difference in the response of the system to a rise in either T or n. The implications for H-mode theories are discussed.},
+	abstract = {The dynamic behavior of the L--H transition in the ASDEX-Upgrade tokamak is described. We focus on the periodic L--H--L transitions known as ‘‘dithering H mode’’ and show that there is an intrinsic time scale in this process which is characteristic for the L--H transition. We give a tentative explanation for the phenomenon using an extension of Itoh’s model for the L--H transition and find that this simple bifurcation model can qualitatively explain many of the experimental observations. According to our model, the dithering cycles are a limit cycle oscillation due to a difference in the response of the system to a rise in either T or n. The implications for H--mode theories are discussed.},
 	number = {2},
 	urldate = {2017-07-27},
 	journal = {Physical Review Letters},
@@ -574,7 +592,7 @@ the model.},
 	issn = {0741-3335},
 	url = {http://stacks.iop.org/0741-3335/39/i=12/a=008},
 	doi = {10.1088/0741-3335/39/12/008},
-	abstract = {Local edge parameters on the ASDEX Upgrade tokamak are investigated at the L-mode to H-mode transition, during phases with various types of edge-localized modes (ELMs), and at the density limit. A scaling law for the boundary electron temperature is found which describes the H-mode threshold for deuterium-puffed discharges with favourable ion-drift direction. The region of stable operation is bounded by type I ELMs near the ideal ballooning limit and by a minimum temperature necessary to avoid thermal instability of the plasma edge. Stationary operation with type III ELMs imposes an upper limit on the edge temperature. Within the entire range of boundary densities investigated, both L-mode and H-mode are found to be accessible. During type I ELMy H-mode, a relation of global confinement with the edge pressure gradient is found which is connected with a loss of the favourable density dependence predicted by the ITER-92P and ITER-93H ELMy H-mode scalings. At high density, better confinement is achieved in H-modes with an edge pressure gradient below the ideal ballooning limit, e.g. during type III ELMy H-mode with impurity-seeded radiation.},
+	abstract = {Local edge parameters on the ASDEX Upgrade tokamak are investigated at the L--mode to H--mode transition, during phases with various types of edge-localized modes (ELMs), and at the density limit. A scaling law for the boundary electron temperature is found which describes the H--mode threshold for deuterium-puffed discharges with favourable ion-drift direction. The region of stable operation is bounded by type I ELMs near the ideal ballooning limit and by a minimum temperature necessary to avoid thermal instability of the plasma edge. Stationary operation with type III ELMs imposes an upper limit on the edge temperature. Within the entire range of boundary densities investigated, both L--mode and H--mode are found to be accessible. During type I ELMy H--mode, a relation of global confinement with the edge pressure gradient is found which is connected with a loss of the favourable density dependence predicted by the ITER-92P and ITER-93H ELMy H--mode scalings. At high density, better confinement is achieved in H--modes with an edge pressure gradient below the ideal ballooning limit, e.g. during type III ELMy H--mode with impurity-seeded radiation.},
 	language = {en},
 	number = {12},
 	urldate = {2017-05-16},
@@ -582,6 +600,19 @@ the model.},
 	author = {Suttrop, W. and Kaufmann, M. and Blank, H. J. de and Brüsehaber, B. and Lackner, K. and Mertens, V. and Murmann, H. and Neuhauser, J. and Ryter, F. and {H Salzmann} and Schweinzer, J. and Stober, J. and Zohm, H. and Team, the ASDEX Upgrade},
 	year = {1997},
 	pages = {2051}
+}
+
+@article{nielsen_simulation_2014,
+	title = {Simulation of transition dynamics to high confinement in fusion plasmas},
+	url = {http://arxiv.org/abs/1409.3186},
+	abstract = {The transition dynamics from the low (L) to the high (H) confinement mode in magnetically confined plasmas is investigated using a first-principles four-field fluid model. Numerical results are in close agreement with measurements from the Experimental Advanced Superconducting Tokamak - EAST. Particularly, the slow transition with an intermediate dithering phase is well reproduced by the numerical solutions. Additionally, the model reproduces the experimentally determined L--H transition power threshold scaling that the ion power threshold increases with increasing particle density. The results hold promise for developing predictive models of the transition, essential for understanding and optimizing future fusion power reactors.},
+	urldate = {2017-05-14},
+	journal = {arXiv:1409.3186 [physics]},
+	author = {Nielsen, A. H. and Xu, G. S. and Madsen, J. and Naulin, V. and Rasmussen, J. Juul and Wan, B. N.},
+	month = sep,
+	year = {2014},
+	note = {arXiv: 1409.3186},
+	keywords = {Physics - Plasma Physics}
 }
 
 @mastersthesis{weymiens_bifurcation_2014,
@@ -599,7 +630,7 @@ the model.},
 	issn = {0029-5515},
 	url = {http://stacks.iop.org/0029-5515/42/i=9/a=309},
 	doi = {10.1088/0029-5515/42/9/309},
-	abstract = {The fluid simulation of a divertor tokamak edge plasma by the B2-SOLPS5.0 transport code gives the dependence of the radial electric field on the local and global plasma parameters. The shear of the radial electric field, which is responsible for the transition to an improved confinement regime, is a linear function of a local ion temperature and the local average toroidal velocity and is inversely proportional to the toroidal magnetic field. The scaling for the L-H transition threshold agrees with the experimental H-mode scaling of ASDEX Upgrade. The radial electric field shows no bifurcation and is close to the neoclassical electric field with the toroidal rotation contribution determined by the radial anomalous transport of the toroidal momentum. The fine structure of the electric field at the separatrix and its dependence on the toroidal magnetic field inversion is analysed.},
+	abstract = {The fluid simulation of a divertor tokamak edge plasma by the B2-SOLPS5.0 transport code gives the dependence of the radial electric field on the local and global plasma parameters. The shear of the radial electric field, which is responsible for the transition to an improved confinement regime, is a linear function of a local ion temperature and the local average toroidal velocity and is inversely proportional to the toroidal magnetic field. The scaling for the L--H transition threshold agrees with the experimental H--mode scaling of ASDEX Upgrade. The radial electric field shows no bifurcation and is close to the neoclassical electric field with the toroidal rotation contribution determined by the radial anomalous transport of the toroidal momentum. The fine structure of the electric field at the separatrix and its dependence on the toroidal magnetic field inversion is analysed.},
 	language = {en},
 	number = {9},
 	urldate = {2017-05-08},
@@ -615,7 +646,7 @@ the model.},
 	issn = {1070-664X},
 	url = {http://aip.scitation.org/doi/10.1063/1.4871856},
 	doi = {10.1063/1.4871856},
-	abstract = {In more than three decades, a large amount of models and mechanisms have been proposed to describe a very beneficial feature of magnetically confined fusion plasmas: the L-H transition. Bifurcation theory can be used to compare these different models based on their dynamical transition structure. In this paper, we employ bifurcation theory to distinguish two fundamentally different descriptions of the interaction between turbulence levels and sheared flows. The analytic bifurcation analysis characterises the parameter space structure of the transition dynamics. Herewith, in these models three dynamically different types of transitions are characterised, sharp transitions, oscillatory transitions, and smooth transitions. One of the two models has a very robust transition structure and is therefore likely to be more accurate for such a robust phenomenon as the L-H transition. The other model needs more fine-tuning to get non-oscillatory transitions. These conclusions from the analytic bifurcation analysis are confirmed by dedicated numerical simulations, with the newly developed code Bifurcator.},
+	abstract = {In more than three decades, a large amount of models and mechanisms have been proposed to describe a very beneficial feature of magnetically confined fusion plasmas: the L--H transition. Bifurcation theory can be used to compare these different models based on their dynamical transition structure. In this paper, we employ bifurcation theory to distinguish two fundamentally different descriptions of the interaction between turbulence levels and sheared flows. The analytic bifurcation analysis characterises the parameter space structure of the transition dynamics. Herewith, in these models three dynamically different types of transitions are characterised, sharp transitions, oscillatory transitions, and smooth transitions. One of the two models has a very robust transition structure and is therefore likely to be more accurate for such a robust phenomenon as the L--H transition. The other model needs more fine-tuning to get non-oscillatory transitions. These conclusions from the analytic bifurcation analysis are confirmed by dedicated numerical simulations, with the newly developed code Bifurcator.},
 	number = {5},
 	urldate = {2017-04-25},
 	journal = {Physics of Plasmas},
@@ -632,4 +663,3 @@ the model.},
 	author = {Schnack, Dalton D.},
 	year = {2009}
 }
-
