Added dithering references

--- a/References/References.bib
+++ b/References/References.bib
@@ -511,6 +511,22 @@
 	pages = {A415}
 }
 
+@article{ryter_survey_2013,
+	title = {Survey of the {H}-mode power threshold and transition physics studies in {ASDEX} {Upgrade}},
+	volume = {53},
+	issn = {0029-5515},
+	url = {http://stacks.iop.org/0029-5515/53/i=11/a=113003},
+	doi = {10.1088/0029-5515/53/11/113003},
+	abstract = {An overview of the H--mode threshold power in ASDEX Upgrade which addresses the impact of the tungsten versus graphite wall, the dependences upon plasma current and density, as well as the influence of the plasma ion mass is given. Results on the H--L back transition are also presented. Dedicated L--H transition studies with electron heating at low density, which enable a complete separation of the electron and ion channels, reveal that the ion heat flux is a key parameter in the L--H transition physics mechanism through the main ion pressure gradient which is itself the main contribution to the radial electric field and the induced flow shearing at the edge. The electron channel does not play any role. The 3D magnetic field perturbations used to mitigate the edge-localized modes are found to also influence the L--H transition and to increase the power threshold. This effect is caused by a flattening of the edge pressure gradient in the presence of the 3D fields such that the L--H transitions with and without perturbations occur at the same value of the radial electric field well, but at different heating powers.},
+	language = {en},
+	number = {11},
+	urldate = {2018-02-14},
+	journal = {Nuclear Fusion},
+	author = {Ryter, F. and Rathgeber, S. K. and Orte, L. Barrera and Bernert, M. and Conway, G. D. and Fischer, R. and Happel, T. and Kurzan, B. and {R.M. McDermott} and Scarabosio, A. and Suttrop, W. and Viezzer, E. and Willensdorfer, M. and Wolfrum, E. and Team, the ASDEX Upgrade},
+	year = {2013},
+	pages = {113003}
+}
+
 @article{veldman_degenerate_2016,
 	title = {Degenerate {Bogdanov}-{Takens} bifurcations in a one-dimensional transport model of a fusion plasma},
 	volume = {331},
@@ -559,6 +575,22 @@ the model.},
 	month = jan,
 	year = {1994},
 	pages = {222--225}
+}
+
+@article{zohm_mhd_1995,
+	title = {{MHD} stability and disruption physics in {ASDEX} {Upgrade}},
+	volume = {37},
+	issn = {0741-3335},
+	url = {http://stacks.iop.org/0741-3335/37/i=11A/a=022},
+	doi = {10.1088/0741-3335/37/11A/022},
+	abstract = {The MHD activity giving rise to the beta - and the density limit in ASDEX Upgrade is analyzed. A detailed description of the MHD phenomena occuring prior to and during disruptions is given. The MHD characteristics of the different ELM types occurring in ASDEX Upgrade are described.},
+	language = {en},
+	number = {11A},
+	urldate = {2018-02-14},
+	journal = {Plasma Physics and Controlled Fusion},
+	author = {Zohm, H. and Maraschek, M. and Pautasso, G. and Schittenhelm, M. and Sesnic, S. and Sokoll, M. and Suttrop, W. and Alexander, M. and {M Bessenrodt-Weberpals} and Boozer, A. and Blank, H. J. de and Fuchs, J. C. and Gernhardt, J. and Gruber, O. and Kass, T. and Kaufmann, M. and Lang, P. T. and Lackner, K. and Meister, H. and Mertens, V. and Neu, R. and Wolfl, F.},
+	year = {1995},
+	pages = {A313}
 }
 
 @mastersthesis{staps_backstepping_2017,
