Added turbulence and flow

--- a/References/References.bib
+++ b/References/References.bib
@@ -190,6 +190,22 @@
 	pages = {2565--2568}
 }
 
+@article{diamond_zonal_2005,
+	title = {Zonal flows in plasma—a review},
+	volume = {47},
+	issn = {0741-3335},
+	url = {http://stacks.iop.org/0741-3335/47/i=5/a=R01},
+	doi = {10.1088/0741-3335/47/5/R01},
+	abstract = {A comprehensive review of zonal flow phenomena in plasmas is presented. While the emphasis is on zonal flows in laboratory plasmas, planetary zonal flows are discussed as well. The review presents the status of theory, numerical simulation and experiments relevant to zonal flows. The emphasis is on developing an integrated understanding of the dynamics of drift wave–zonal flow turbulence by combining detailed studies of the generation of zonal flows by drift waves, the back-interaction of zonal flows on the drift waves, and the various feedback loops by which the system regulates and organizes itself. The implications of zonal flow phenomena for confinement in, and the phenomena of fusion devices are discussed. Special attention is given to the comparison of experiment with theory and to identifying directions for progress in future research.},
+	language = {en},
+	number = {5},
+	urldate = {2018-02-15},
+	journal = {Plasma Physics and Controlled Fusion},
+	author = {Diamond, P. H. and Itoh, S.-I. and Itoh, K. and Hahm, T. S.},
+	year = {2005},
+	pages = {R35}
+}
+
 @book{freidberg_ideal_1987,
 	edition = {1st},
 	title = {Ideal {Magnetohydrodynamics}},
@@ -349,7 +365,6 @@
 	year = {1998},
 	pages = {4121--4123}
 }
-
 @article{itoh_edge_1991,
 	title = {Edge localized mode activity as a limit cycle in tokamak plasmas},
 	volume = {67},
@@ -364,6 +379,7 @@
 	year = {1991},
 	pages = {2485--2488}
 }
+
 @article{kasuya_effect_2003,
 	title = {Effect of electrode biasing on the radial electric field structure bifurcation in tokamak plasmas},
 	volume = {43},
@@ -550,6 +566,38 @@
 	year = {2009}
 }
 
+@article{scott_three-dimensional_1997,
+	title = {Three-dimensional computation of collisional drift wave turbulence and transport in tokamak geometry},
+	volume = {39},
+	issn = {0741-3335},
+	url = {http://stacks.iop.org/0741-3335/39/i=3/a=010},
+	doi = {10.1088/0741-3335/39/3/010},
+	abstract = {Three-dimensional computations of turbulence arising from the nonlinear collisional drift wave equations are carried out. The flux-surface-based coordinate system is aligned with the magnetic field, and the geometry is that of an actual model tokamak with arbitrary poloidal cross section. The physical periodicity constraint is rigorously respected. The results show that the dominant process arising from this system is the three-dimensional version of the collisional drift wave nonlinear instability, in which fluctuation free energy transfer among parallel wavelengths plays an enhanced role. Poloidal asymmetry in the fluctuations and associated transport are found to result primarily from the poloidal variation in the ion polarization drift and not the more traditional ballooning (magnetic curvature) effects. Magnetic curvature is found to be very important only in the case of reversed magnetic shear: with it, reversing the shear causes a drop in the thermal energy flux by a factor of three. The contrast with concurrent work on ballooning is suggested to result from the latter's neglect of the electron temperature dynamics. As in previous results of two-dimensional slab computations, the electron temperature gradient is the principal free energy source. The turbulence appears to be non-local over the radial range of the 4 cm covered by the computations; the non-locality is a form of weighted averaging of the free energy sources and sinks by the turbulence, and is sufficient to explain the rise in relative amplitude with increasing radius since the absolute amplitude is relatively constant. Initial tests with an isothermal ion pressure suggest that the ion dynamics could make up the quantitative difference between these results and the experimental observations, once the ion temperature is properly incorporated.},
+	language = {en},
+	number = {3},
+	urldate = {2018-02-15},
+	journal = {Plasma Physics and Controlled Fusion},
+	author = {Scott, B.},
+	year = {1997},
+	pages = {471}
+}
+
+@article{scott_nonlinear_2002,
+	title = {The nonlinear drift wave instability and its role in tokamak edge turbulence},
+	volume = {4},
+	issn = {1367-2630},
+	url = {http://stacks.iop.org/1367-2630/4/i=1/a=352},
+	doi = {10.1088/1367-2630/4/1/352},
+	abstract = {Drift wave turbulence, in general a balance between E × B drift turbulence in planes perpendicular to, and dissipative wave dynamics parallel to, a background magnetic field, is a hallmark example of nonlinearity in plasma physics. The turbulence generally has the same basic character in a sheared magnetic field lying in closed surfaces whether linear instabilities are present or not. Only when the linear forcing terms are dominant does this situation not prevail; it is not analogous to neutral fluid turbulence where pure linear forcing is balanced by pure nonlinear mixing and decorrelation. Detailed computations show that two types of nonlinearity are simultaneously present: advection of fluid vorticity by the E × B flows, which tends to have a scattering character, and E × B advection of pressure disturbances, which has the familiar diffusive mixing character. The vorticity nonlinearity excites the turbulence, acting against the mostly linear parallel dynamics which constrains it, while the pressure nonlinearity provides dissipation via transfer to ever smaller scales. The practical result is that the saturated level of the turbulence and the resulting averaged thermal energy transport are controlled principally by these nonlinear mechanisms even when moderate linear instabilities are present. The model is mostly applicable to tokamak edge turbulence, for which the linear forcing effects are sufficiently moderate that the nonlinear physics is allowed to operate.},
+	language = {en},
+	number = {1},
+	urldate = {2018-02-15},
+	journal = {New Journal of Physics},
+	author = {Scott, Bruce D.},
+	year = {2002},
+	pages = {52}
+}
+
 @article{shaing_bifurcation_1990,
 	title = {Bifurcation of poloidal rotation and suppression of turbulent fluctuations: {A} model for the {L}--{H} transition in tokamaks},
 	volume = {2},
@@ -618,6 +666,21 @@
 	pages = {2051}
 }
 
+@article{terry_suppression_2000,
+	title = {Suppression of turbulence and transport by sheared flow},
+	volume = {72},
+	url = {https://link.aps.org/doi/10.1103/RevModPhys.72.109},
+	doi = {10.1103/RevModPhys.72.109},
+	abstract = {The role of stable shear flow in suppressing turbulence and turbulent transport in plasmas and neutral fluids is reviewed. Localized stable flow shear produces transport barriers whose extensive and highly successful utilization in fusion devices has made them the primary experimental technique for reducing and even eliminating the rapid turbulent losses of heat and particles that characterize fusion-grade plasmas. These transport barriers occur in different plasma regions with disparate physical properties and in a range of confining configurations, indicating a physical process of unusual universality. Flow shear suppresses turbulence by speeding up turbulent decorrelation. This is a robust feature of advection whenever the straining rate of stable mean flow shear exceeds the nonlinear decorrelation rate. Shear straining lowers correlation lengths in the direction of shear and reduces turbulent amplitudes. It also disrupts other processes that feed into or result from turbulence, including the linear instability of important collective modes, the transport-producing correlations between advecting fluid and advectants, and large-scale spatially connected avalanchelike transport events. In plasmas, regions of stable flow shear can be externally driven, but most frequently are created spontaneously in critical transitions between different plasma states. Shear suppression occurs in hydrodynamics and represents an extension of rapid-distortion theory to a long-time-scale nonlinear regime in two-dimensional stable shear flow. Examples from hydrodynamics include the emergence of coherent vortices in decaying two-dimensional Navier-Stokes turbulence and the reduction of turbulent transport in the stratosphere.},
+	number = {1},
+	urldate = {2018-02-15},
+	journal = {Reviews of Modern Physics},
+	author = {Terry, P. W.},
+	month = jan,
+	year = {2000},
+	pages = {109--165}
+}
+
 @article{toda_theoretical_1997,
 	title = {A theoretical model of {H}-mode transition triggered by condensed neutrals near {X}-point},
 	volume = {39},
@@ -664,7 +727,6 @@ in simplified transport models of the fusion plasma in one spatial dimension. We
 	keywords = {Bifurcation, L-H transition, Large-scale systems, MATLAB, Numerical continuation},
 	pages = {13--26}
 }
-
 @article{viezzer_evidence_2014,
 	title = {Evidence for the neoclassical nature of the radial electric field in the edge transport barrier of {ASDEX} {Upgrade}},
 	volume = {54},
@@ -720,6 +782,7 @@ in simplified transport models of the fusion plasma in one spatial dimension. We
 	year = {2014},
 	pages = {052302}
 }
+
 @article{zhang_edge_1992,
 	title = {Edge turbulence scaling with shear flow},
 	volume = {4},
@@ -765,3 +828,4 @@ in simplified transport models of the fusion plasma in one spatial dimension. We
 	year = {1995},
 	pages = {A313}
 }
+
