--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -51,7 +51,7 @@
 	\ifdim\ht\IBoxA>\ht\IBoxB
 		\setlength\IHeight{\ht\IBoxB}%
 	\else\setlength\IHeight{\ht\IBoxA}\fi
-	\begin{figure}[htb]
+	\begin{figure}[hbt]
 		\minipage[t]{0.48\textwidth}\centering
 			\includegraphics[height=\IHeight]{#1}
 			\caption{#2}\label{#3}
@@ -71,7 +71,7 @@
 	\ifdim\ht\IBoxA>\ht\IBoxB
 		\setlength\IHeight{\ht\IBoxB}%
 	\else\setlength\IHeight{\ht\IBoxA}\fi
-	\begin{figure}[htb]
+	\begin{figure}[hbt]
 		\minipage[t]{0.48\textwidth}\centering
 			\includegraphics[height=\IHeight]{#1}
 		\endminipage\hfill
